--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Create-EC2-Instance-With-Jenkins/terraform.tfstate
 Create-EC2-Instance-With-Jenkins/terraform.tfstate.backup
 Create-EC2-Instance-With-Jenkins/.terraform.lock.hcl
 Create-EC2-Instance-With-Jenkins/login-to-created-instance.sh
-Create-EC2-Instance-With-Jenkins/*.pem
+Create-EC2-Instance-With-Jenkins/jenkins-key.pem
 
