--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ Create-EC2-Instance-With-Jenkins/terraform.tfstate
 Create-EC2-Instance-With-Jenkins/terraform.tfstate.backup
 Create-EC2-Instance-With-Jenkins/.terraform.lock.hcl
 Create-EC2-Instance-With-Jenkins/login-to-created-instance.sh
-Create-EC2-Instance-With-Jenkins/jenkins-key.pem
-
+Create-K8s-Cluster/jenkins-key.pem
+Create-K8s-Cluster/.terraform
+Create-K8s-Cluster/jenkins-key.pem
+Create-K8s-Cluster/terraform.tfstate
+Create-K8s-Cluster/terraform.tfstate.backup
+Create-K8s-Cluster/.terraform.lock.hcl
