--- a/Create-K8s-Cluster/install_docker.yml
+++ b/Create-K8s-Cluster/install_docker.yml
@@ -37,3 +37,6 @@
         state: started
         enabled: yes
 
+    - name: Add user ubutu to Docker groupi
+      shell: |     
+        usermod -aG docker ubuntu
