--- a/Create-K8s-Cluster/install_k8s.yml
+++ b/Create-K8s-Cluster/install_k8s.yml
@@ -1,58 +1,66 @@
 ---
-- name: Set up Kubernetes on Ubuntu nodes
+- name: Install Docker on Ubuntu
   hosts: all
   become: yes
   tasks:
 
-    - name: Add Kubernetes GPG key
-      get_url:
-        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-        dest: /tmp/kubernetes-apt-key.gpg
-        mode: '0644'
 
-    - name: Add Kubernetes apt repository
-      apt_repository:
-        repo: "deb https://apt.kubernetes.io/ kubernetes-stable main"
+    # Apt Upgrade       
+    - name: Update apt  
+      apt:
+        upgrade: yes
+
+    # Install Dependencies
+    - name: Install Dependencies and Containerd
+      apt:
+        name:
+          - apt-transport-https
+          - curl
+          - containerd  
         state: present
-        filename: kubernetes
-        update_cache: yes
 
-    - name: Add the GPG key to apt keyring
-      command: apt-key add /tmp/kubernetes-apt-key.gpg
+    # Configure Containerd
+    - name: Configure Containerd
+      shell: |
+        sudo mkdir -p /etc/containerd
+        containerd config default | sudo tee /etc/containerd/config.toml > /dev/null
+        sudo sed -i 's/SystemdCgroup = false/SystemdCgroup = true/' /etc/containerd/config.toml
+        sudo systemctl restart containerd
+        rm -r /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+        curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.30/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
 
-    - name: Update apt package index
+    # Add Docker's official repository to apt sources
+    - name: Add K8s apt repository
+      apt_repository:
+        repo: 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.30/deb/ /'
+        state: present
+        filename: 'kubernetes'
+
+    # Update apt cache
+    - name: Update apt cache
       apt:
         update_cache: yes
 
-    - name: Install Kubernetes packages
+    # Install K8s
+    - name: Install K8s
       apt:
         name:
           - kubelet
           - kubeadm
           - kubectl
         state: present
-        update_cache: yes
 
-    - name: Mark kubelet to hold at current version
-      apt:
-        name: kubelet
-        state: held
-
-    - name: Ensure Docker is installed
-      apt:
-        name: docker.io
-        state: present
-        update_cache: yes
-
-    - name: Start Docker service
-      service:
-        name: docker
-        state: started
-        enabled: yes
-
-    - name: Enable Kubernetes services (kubelet)
-      systemd:
-        name: kubelet
-        enabled: yes
-        state: started
+   # Post Installation Configs
+    - name: Post Installation Config
+      shell: |     
+        sudo apt-mark hold kubelet kubeadm kubectl
+        sudo swapoff -a
+        sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+        sudo modprobe overlay
+        sudo modprobe br_netfilter
+        cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
+        net.bridge.bridge-nf-call-iptables  = 1
+        net.bridge.bridge-nf-call-ip6tables = 1
+        net.ipv4.ip_forward                 = 1
+        EOF
 
