--- a/Create-K8s-Cluster/ansible_inventory.ini
+++ b/Create-K8s-Cluster/ansible_inventory.ini
@@ -1,14 +1,16 @@
 [all:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -o StrictHostKeyChecking=no -W %h:%p -q ubuntu@54.145.246.51 -i ./cluster_key.pem"'
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -o StrictHostKeyChecking=no -W %h:%p -q ubuntu@3.84.11.252 -i ./cluster_key.pem"'
 ansible_user=ubuntu
 ansible_ssh_private_key_file=./cluster_key.pem
 
+[master1]
+master1-b ansible_host=10.0.61.13
+
 [masters]
-master1-a ansible_host=10.0.54.77
-master1-b ansible_host=10.0.69.95
-master1-c ansible_host=10.0.83.51
+master1-a ansible_host=10.0.67.111
+master1-c ansible_host=10.0.80.24
 
 [workers]
-worker-1a ansible_host=10.0.49.53
-worker-1b ansible_host=10.0.65.117
-worker-1c ansible_host=10.0.93.136
+worker-1a ansible_host=10.0.61.53
+worker-1b ansible_host=10.0.69.37
+worker-1c ansible_host=10.0.88.51
