--- a/k8s-ha-app-postgres/helm/incident-tracker/templates/deployment.yaml
+++ b/k8s-ha-app-postgres/helm/incident-tracker/templates/deployment.yaml
@@ -1,78 +1,72 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "incident-tracker.fullname" . }}
-  labels:
-    {{- include "incident-tracker.labels" . | nindent 4 }}
+  name: {{ .Values.appDeployment.name  }}
+  namespace: demo-ha-app
+  labels: 
+    app: {{ .Values.appDeployment.name  }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
+  replicas: {{ .Values.appDeployment.replicas }}
   selector:
     matchLabels:
-      {{- include "incident-tracker.selectorLabels" . | nindent 6 }}
+      app: {{ .Values.appDeployment.name  }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       labels:
-        {{- include "incident-tracker.labels" . | nindent 8 }}
-        {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+        app: {{ .Values.appDeployment.name  }}
     spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "incident-tracker.serviceAccountName" . }}
-      {{- with .Values.podSecurityContext }}
-      securityContext:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
-          {{- with .Values.securityContext }}
-          securityContext:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: {{ .Values.service.port }}
-              protocol: TCP
-          {{- with .Values.livenessProbe }}
-          livenessProbe:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.readinessProbe }}
-          readinessProbe:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.resources }}
-          resources:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.volumeMounts }}
-          volumeMounts:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-      {{- with .Values.volumes }}
-      volumes:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      - name: {{ .Values.appDeployment.name }}
+        image: {{ .Values.appDeployment.containers.image.release }}:{{ .Values.appDeployment.containers.image.version }} # Replace with your actual app image
+        ports:
+        - containerPort: {{ .Values.appDeployment.containers.port.containerPort }}
+          name: {{ .Values.appDeployment.containers.port.name }}
+        resources:  
+          requests:
+            memory: {{ .Values.appDeployment.containers.resources.requests.memory }}
+            cpu: {{ .Values.appDeployment.containers.resources.requests.cpu }}
+          limits: 
+            memory: {{ .Values.appDeployment.containers.resources.limits.memory }} 
+            cpu: {{ .Values.appDeployment.containers.resources.limits.cpu }}         
+        env:
+        - name: DB_HOST # Injecting as an env var
+          valueFrom:
+            configMapKeyRef:
+              name: app-config # Name of the ConfigMap
+              key: DB_HOST  # Key from the ConfigMap
+        - name: DB_PORT # Injecting another as env var
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: DB_PORT
+        - name: DB_NAME # Injecting as an env var
+          valueFrom:
+            configMapKeyRef:
+              name: app-config # Name of the ConfigMap
+              key: DB_NAME  # Key from the ConfigMap
+        - name: DB_USER # Injecting another as env var
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: DB_USER
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_PASSWORD         
+        livenessProbe: 
+          httpGet:
+            path: /health
+            port: http
+          initialDelaySeconds: 10      #Time probe waits before start checking
+          periodSeconds: 10        #Frequency of running the probe
+          timeoutSeconds: 2          #number of seconds probe waits for a response
+          failureThreshold: 3         # number of failures until probe starts the container
+        readinessProbe:
+          httpGet:      
+            path: /health
+            port: http
+          initialDelaySeconds: 5      #Number of seconds probe waits before start checking
+          periodSeconds: 5          # Frequency of probe checking for readiness
+          timeoutSeconds: 2         # number of seconds probe waits for a response
+          failureThreshold: 3        # number of consecutive successes to mark as ready
